<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 Felix Ableitner

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <com.github.nutomic.pegasus.VolumePreference
        android:key="ringtone_volume" 
        android:title="@string/profileedit_ringtone"
        android:persistent="false" />
    
    <com.github.nutomic.pegasus.VolumePreference
        android:key="notification_volume"
        android:title="@string/profileedit_notification"
        android:persistent="false" />
    
    <com.github.nutomic.pegasus.VolumePreference
        android:key="media_volume"
        android:title="@string/profileedit_media"
        android:persistent="false" />
    
    <com.github.nutomic.pegasus.VolumePreference
        android:key="alarm_volume"
        android:title="@string/profileedit_alarm"
        android:persistent="false" />
    
    <ListPreference 
        android:key="ringer_mode"
        android:title="@string/profileedit_ringer"
        android:entries="@array/profileedit_ringer_mode_strings"
        android:entryValues="@array/profileedit_ringer_mode_values"
        android:persistent="false" />
    
    <CheckBoxPreference
        android:key="wifi_enabled"
        android:title="@string/profileedit_wifi"
        android:persistent="false" />
    
</PreferenceScreen>